--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,6 @@
 <resources>
     <string name="app_name">ALIZE</string>
     <string name="action_settings">Settings</string>
-    <string name="test">little test %1$s</string>
     <string name="bold">bold</string>
     <string name="italic">italic</string>
     <string name="underline">underline</string>
@@ -10,8 +9,8 @@
     <string name="red">red</string>
     <string name="hide">hide</string>
     <string name="show">show</string>
-    <string name="edit">Edit : </string>
-    <string name="prev">Prev : </string>
+    <string name="edit">Edit: </string>
+    <string name="prev">Prev: </string>
     <string name="contact">Contact us</string>
     <string name="about">About</string>
     <string name="main_menu">Main menu</string>
@@ -24,7 +23,7 @@
     <string name="edit_speaker_model">Edit Speaker Model</string>
     <string name="add_speaker_with_record">Add speaker model with record</string>
     <string name="choose_a_speaker_name">Choose a speaker name</string>
-    <string name="speaker_name">Speaker name</string>
+    <string name="speaker_name">Speaker name: </string>
     <string name="launch_record">Start</string>
     <string name="stop_record">Stop</string>
     <string name="play_record">Play</string>
@@ -34,7 +33,7 @@
     <string name="add_audio_files">Add audio files</string>
     <string name="edit_speaker_model_with_record">Edit speaker model with record</string>
     <string name="apply_changes">Apply changes</string>
-    <string name="new_speaker">New speaker</string>
+    <string name="new_speaker">Add speaker</string>
     <string name="empty" />
     <string name="test_speaker">Test</string>
     <string name="update_speaker">Update</string>
@@ -43,4 +42,6 @@
     <string name="update_speaker_model">Update speaker model</string>
     <string name="identify">Identify</string>
     <string name="remove_all">Remove All</string>
+    <string name="default_time">00:00:00</string>
+    <string name="speakerExist">This speaker name already exists!</string>
 </resources>
