--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">ALIZE</string>
+    <string name="app_name">ALIZE-Android</string>
     <string name="speakers_list">Liste des locuteurs</string>
     <string name="verification">Vérification</string>
     <string name="no_speakers">Il n\'existe aucun locuteur pour le moment.</string>
