Improved timer performances and added Javadoc/comments.

--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -18,4 +18,5 @@
     <string name="identify_speaker">Identifier un locuteur</string>
     <string name="permission_error_message">Vous ne pouvez pas utiliser cette app sans cette permission.</string>
     <string name="no_sound_detected_recoloc">Aucune parole détectée, veuillez réessayer.</string>
+    <string name="error_remove_speaker">Une erreur est survenue lors de la supression de cet utilisateur.</string>
 </resources>
